--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Captcha container -->
     <div class="container-captcha">
+        <!-- captcha area -->
         <div class="captcha-wrapper">
             <span id="spaning" aria-disabled="true">45@157%AD</span>
             <i id="repeating" class="fa-solid fa-repeat"></i>
         </div>
+        <!-- user-input area -->
         <div class="textbox-wrapper">
             <input type="text" name="textboxarea" id="mytextbox" title="Must contain 9 characters while 45@157%AD is invalid default!" placeholder=" Enter the captcha">
             <button type="submit" id="mybtn">Submit</button>
         </div>
         <label id="mylab"></label>
     </div>
-
+<!-- javascript coding -->
     <script>
 var label = document.getElementById("mylab");
 var captcha = document.getElementById("spaning");
@@ -28,7 +31,7 @@ var reloader = document.getElementById("repeating");
 var txtbox = document.getElementById("mytextbox");
 var btn = document.getElementById("mybtn");
 var myarrofCaptcha = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z','0','1','2','3','4','5','6','7','8','9','!','@','#','$','%','&']
-
+// click refresh button to generate random number/array of captchas
 reloader.addEventListener("click", ()=>{
     reloader.style.transform = "rotate(1turn)";
     let emptyarr = "";
@@ -38,14 +41,17 @@ reloader.addEventListener("click", ()=>{
     emptyarr += mycaptcha;
     
     }
+    // set time out for captcha reload to show up
     setTimeout(() => {
         captcha.innerHTML = `${emptyarr}`; 
     }, 1000);
+    // set time interval for captcha shown to expire
     setInterval(() => {
         captcha.innerHTML = "Expired!";
-    }, 30000);
+    }, 60000);
    
    })  
+//    onclicking the submit button, perform matching operation and userinput and captcha
 btn.addEventListener("click", ()=>{
     if (txtbox.value === captcha.innerHTML && txtbox.value !== "45@157%AD") {
         txtbox.value = "";
