--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ reloader.addEventListener("click", ()=>{
    })  
 //    onclicking the submit button, perform matching operation and userinput and captcha
 btn.addEventListener("click", ()=>{
-    if (txtbox.value === captcha.innerHTML && txtbox.value !== "45@157%AD") {
+    if (txtbox.value === captcha.innerHTML && txtbox.value !== "45@157%AD" && txtbox.value !== "Expired!") {
         txtbox.value = "";
         txtbox.innerHTML = "";
         label.innerHTML = "Correct Captcha! You are a Human!";
